--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
 
 Wooohoooooo ! Here we go !
 
-I apologyze for the code, it s veryyyy bad, change my idea last night !
+I apologyze for the code, it was the rush !
 
 ==============================================================================
 
@@ -37,10 +37,6 @@ Github Source : https://github.com/ipfix/
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Christmas Experiments - DAY 1</title>
-        <meta name="description" content="">
-        <meta property="og:title" content=""/>
-        <meta property="og:url" content=""/>
-        <meta property="og:type" content="game"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/main.css">
